--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,12 @@
 Package: Snowball
-Version: 0.0-3
-Date: 2007-09-11
+Version: 0.0-4
+Date: 2009-04-29
 Title: Snowball Stemmers
 Author: Kurt Hornik
 Maintainer: Kurt Hornik <Kurt.Hornik@R-project.org>
 Description: Snowball stemmers.
-Depends: RWeka (>= 0.3-0)
+Depends: RWeka (>= 0.3-17)
 License: BSD
-Packaged: Mon Feb 18 09:36:27 2008; hornik
+Packaged: 2009-04-29 11:27:04 UTC; hornik
+Repository: CRAN
+Date/Publication: 2009-04-29 11:34:17
