--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: Snowball
-Version: 0.0-4
-Date: 2009-04-29
+Version: 0.0-5
+Date: 2009-04-30
 Title: Snowball Stemmers
 Author: Kurt Hornik
 Maintainer: Kurt Hornik <Kurt.Hornik@R-project.org>
 Description: Snowball stemmers.
-Depends: RWeka (>= 0.3-17)
+Imports: RWeka (>= 0.3-17), rJava
 License: BSD
-Packaged: 2009-04-29 11:27:04 UTC; hornik
+Packaged: 2009-04-30 07:03:57 UTC; hornik
 Repository: CRAN
-Date/Publication: 2009-04-29 11:34:17
+Date/Publication: 2009-04-30 07:12:24
