--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: Snowball
-Version: 0.0-5
-Date: 2009-04-30
+Version: 0.0-6
+Date: 2009-06-09
 Title: Snowball Stemmers
 Author: Kurt Hornik
 Maintainer: Kurt Hornik <Kurt.Hornik@R-project.org>
 Description: Snowball stemmers.
-Imports: RWeka (>= 0.3-17), rJava
+Imports: RWeka (>= 0.3-19), rJava (>= 0.6-0)
 License: BSD
-Packaged: 2009-04-30 07:03:57 UTC; hornik
+Packaged: 2009-06-09 09:45:37 UTC; hornik
 Repository: CRAN
-Date/Publication: 2009-04-30 07:12:24
+Date/Publication: 2009-06-09 10:06:44
