--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: Snowball
-Version: 0.0-7
-Date: 2009-08-30
+Version: 0.0-8
 Title: Snowball Stemmers
-Author: Kurt Hornik
-Maintainer: Kurt Hornik <Kurt.Hornik@R-project.org>
+Authors@R: person("Kurt", "Hornik", role = c("aut", "cre"), email =
+        "Kurt.Hornik@R-project.org")
 Description: Snowball stemmers.
 Imports: RWeka (>= 0.3-19), rJava (>= 0.6-3)
 License: BSD
-Packaged: 2009-08-30 17:30:32 UTC; hornik
+Packaged: 2013-01-06 12:19:30 UTC; hornik
+Author: Kurt Hornik [aut, cre]
+Maintainer: Kurt Hornik <Kurt.Hornik@R-project.org>
 Repository: CRAN
-Date/Publication: 2009-08-31 08:47:38
+Date/Publication: 2013-01-06 13:27:29
