--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,14 @@
 Package: Snowball
-Version: 0.0-8
+Version: 0.0-9
 Title: Snowball Stemmers
 Authors@R: person("Kurt", "Hornik", role = c("aut", "cre"), email =
         "Kurt.Hornik@R-project.org")
 Description: Snowball stemmers.
 Imports: RWeka (>= 0.3-19), rJava (>= 0.6-3)
-License: BSD
-Packaged: 2013-01-06 12:19:30 UTC; hornik
+License: BSD | file LICENSE
+Packaged: 2013-03-19 14:25:31 UTC; hornik
 Author: Kurt Hornik [aut, cre]
 Maintainer: Kurt Hornik <Kurt.Hornik@R-project.org>
+NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2013-01-06 13:27:29
+Date/Publication: 2013-03-19 15:58:46
