--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,20 @@
 Package: Snowball
-Version: 0.0-9
+Version: 0.0-10
 Title: Snowball Stemmers
-Authors@R: person("Kurt", "Hornik", role = c("aut", "cre"), email =
-        "Kurt.Hornik@R-project.org")
+Authors@R: c(person("Kurt", "Hornik", role = c("aut", "cre"),
+                    email = "Kurt.Hornik@R-project.org"),
+             person("Martin", "Porter", role = c("ctb", "cph"),
+                    comment = "Snowball base"),
+             person("Richard", "Boulton", role = c("ctb", "cph"),
+                    comment = "Snowball Java library"))
 Description: Snowball stemmers.
 Imports: RWeka (>= 0.3-19), rJava (>= 0.6-3)
-License: BSD | file LICENSE
-Packaged: 2013-03-19 14:25:31 UTC; hornik
-Author: Kurt Hornik [aut, cre]
+License: BSD_2_clause + file LICENSE
+Packaged: 2013-09-05 16:37:24 UTC; hornik
+Author: Kurt Hornik [aut, cre],
+  Martin Porter [ctb, cph] (Snowball base),
+  Richard Boulton [ctb, cph] (Snowball Java library)
 Maintainer: Kurt Hornik <Kurt.Hornik@R-project.org>
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2013-03-19 15:58:46
+Date/Publication: 2013-09-05 19:08:56
